<resources>
    <string name="app_name">RedditClone</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="desc">desc</string>
    <string name="already_nhave_an_naccount">Please \nEnter \nUsername \nand \nPassword</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="Continue">Continue</string>
    <string name="separator_text">-</string>
</resources>
