<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="onTextChanged"
      type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />

    <variable
      name="viewmodel"
      type="com.vishal.redditclone.ui.login.LoginViewModel" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="30dp"
    android:paddingTop="20dp"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/white"
      android:focusableInTouchMode="true"
      android:paddingBottom="?attr/actionBarSize">

      <LinearLayout
        android:id="@+id/phoneAuthFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/already_nhave_an_naccount"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_register_hero" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/username_input"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/password_input"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/btn_continue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:background="@drawable/circle_button"
          android:foreground="?attr/selectableItemBackgroundBorderless"
          android:onClick="@{()->viewmodel.doLogin(username.getText().toString(),password.getText().toString())}"
          android:text="@string/Continue" />

      </LinearLayout>
      <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:visibility="@{viewmodel.progressView}" />
    </RelativeLayout>
  </ScrollView>
</layout>